--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -1,3 +1,3 @@
 <!-- views/partials/footer.ejs -->
 
-<p class="text-center text-muted">© Copyright 2016 amg0</p>
+<p class="text-center text-muted">&#9400; Copyright 2016 amg0</p>
