client side structure

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -22,5 +22,6 @@
         <% include ../views/footer %>
     </footer>
     
+	<script src='/javascripts/MNOW_UIManager.js'></script>
 </body>
 </html>
