--- a/views/defaultlist.ejs
+++ b/views/defaultlist.ejs
@@ -13,6 +13,10 @@
 
     <main>
 		<h1><%=title%></h1>
+		<div class='row'>
+			<div id ='mnow-list' class='col-xs-12'>
+			</div>
+		</div>
     </main>
 
     <footer>
