--- a/views/defaultlist.ejs
+++ b/views/defaultlist.ejs
@@ -1,27 +1,7 @@
-<!-- views/pages/index.ejs -->
-
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <% include ../views/head %>
-</head>
-<body class="container">
-
-    <header>
-        <% include ../views/header %>
-    </header>
-
-    <main>
-		<h1><%=title%></h1>
-		<div class='row'>
-			<div id ='mnow-list' class='col-xs-12'>
-			</div>
-		</div>
-    </main>
-
-    <footer>
-        <% include ../views/footer %>
-    </footer>
-    
-</body>
-</html>
+<!-- views/pages/defaultlist.ejs -->
+<h1><%=title%></h1>
+<div class='row'>
+	<div id ='mnow-list' >
+	<%= HtmlUtils.array2Table(data) %>
+	</div>
+</div>
