--- a/views/head.ejs
+++ b/views/head.ejs
@@ -10,7 +10,9 @@
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js" ></script>
 <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" ></script>
 <script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js" ></script> 
-<script src="//cdnjs.cloudflare.com/ajax/libs/jquery-bootgrid/1.2.0/jquery.bootgrid.min.js" defer></script> 	
+<script src="//cdnjs.cloudflare.com/ajax/libs/jquery-bootgrid/1.2.0/jquery.bootgrid.min.js"></script> 	
+<script src="https://embeddedjavascript.googlecode.com/files/ejs_production.js"></script>
+<script src="https://embeddedjavascript.googlecode.com/files/ejs_fulljslint.js"></script>
 <style>
     body    { padding-top:50px; }
 </style>
