working list and add for project and users

--- a/views/defaultlist.ejs
+++ b/views/defaultlist.ejs
@@ -2,6 +2,9 @@
 <h1><%=title%></h1>
 <div class='row'>
 	<div id ='mnow-list' >
-	<%= HtmlUtils.array2Table(data) %>
+	<div class='col-xs-12'>
+		<button type="button" class="btn btn-default" id="mnow-create-object"><span class="glyphicon glyphicon-plus" aria-hidden="true" data-toggle="tooltip" data-placement="bottom" title="Add"></span>&nbsp;Create</button>	
+	</div>
+	<%= HtmlUtils.array2Table(htmlid,data) %>
 	</div>
 </div>
