--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,7 +10,7 @@
     <header>
         <% include ../views/header %>
     </header>
-
+	<div id='dialogs'></div>
     <main>
         <div class="jumbotron">
             <h1>This is great</h1>
