--- a/views/defaultlist.ejs
+++ b/views/defaultlist.ejs
@@ -5,6 +5,6 @@
 	<div class='col-xs-12'>
 		<button type="button" class="btn btn-default" id="mnow-create-object"><span class="glyphicon glyphicon-plus" aria-hidden="true" data-toggle="tooltip" data-placement="bottom" title="Add"></span>&nbsp;Create</button>	
 	</div>
-	<%= HtmlUtils.array2Table(htmlid,data) %>
+	<%= HtmlUtils.array2Table(htmlid,data,"id",null,commandtbl) %>
 	</div>
 </div>
