support for required fields and bootstrap validation

--- a/views/ff_input.ejs
+++ b/views/ff_input.ejs
@@ -1,5 +1,6 @@
 <!-- views/pages/formfield_input.ejs -->
   <div class="form-group">
     <label for="<%=key%>"><%=key%></label>
-    <input type="<%=htmltype%>" class="form-control" id="<%=key%>" placeholder="<%=placeholder%>" value="<%=value%>" <% if (key=="id") {%> readonly <%}%>>
+    <input <% if (required==true) {%> required <%}%> type="<%=htmltype%>" class="form-control" id="<%=key%>" placeholder="<%=placeholder%>" value="<%=value%>" <% if (key=="id") {%> readonly <%}%>>
+	<div class="help-block with-errors"></div>
   </div>
