--- a/views/head.ejs
+++ b/views/head.ejs
@@ -8,12 +8,13 @@
 <link rel="stylesheet" type="text/css" href="//ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/themes/smoothness/jquery-ui.css">
 <link rel="stylesheet" type="text/css" href="//cdnjs.cloudflare.com/ajax/libs/jquery-bootgrid/1.3.1/jquery.bootgrid.min.css">
 <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
-<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js" ></script>
-<script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" ></script>
-<script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js" ></script> 
-<script src="//cdnjs.cloudflare.com/ajax/libs/jquery-bootgrid/1.3.1/jquery.bootgrid.min.js"></script> 	
-<script src="https://embeddedjavascript.googlecode.com/files/ejs_production.js"></script>
-<script src="https://embeddedjavascript.googlecode.com/files/ejs_fulljslint.js"></script>
+<script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js" ></script>
+<script type="text/javascript" src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" ></script>
+<script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js" ></script> 
+<script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/jquery-bootgrid/1.3.1/jquery.bootgrid.min.js"></script> 	
+<script type="text/javascript" src="https://rawgit.com/1000hz/bootstrap-validator/master/js/validator.js"></script> 	
+<script type="text/javascript" src="https://embeddedjavascript.googlecode.com/files/ejs_production.js"></script>
+<script type="text/javascript" src="https://embeddedjavascript.googlecode.com/files/ejs_fulljslint.js"></script>
 <style>
     body    { padding-top:50px; }
 </style>
