--- a/views/defaultdialog.ejs
+++ b/views/defaultdialog.ejs
@@ -2,7 +2,7 @@
 <div id="<%=htmlid%>" class="modal fade" tabindex="-1" role="dialog">
   <div class="modal-dialog">
     <div class="modal-content">
-	 <form id='mnow-form' data-toggle='validator'>
+	 <form id='mnow-form' action="javascript:void(0);" data-toggle='validator'>
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
         <h4 class="modal-title"><%=title%></h4>
