prepare reference field capability

--- a/views/ff_input.ejs
+++ b/views/ff_input.ejs
@@ -1,4 +1,4 @@
-<!-- views/pages/formfield_input.ejs -->
+<!-- views/pages/ff_input.ejs -->
   <div class="form-group">
     <label for="<%=key%>"><%=key%></label>
     <input <% if (required==true) {%> required <%}%> type="<%=htmltype%>" class="form-control" id="<%=key%>" placeholder="<%=placeholder%>" value="<%=value%>" <% if (key=="id") {%> readonly <%}%>>
