--- a/views/index.ejs
+++ b/views/index.ejs
@@ -22,6 +22,9 @@
         <% include ../views/footer %>
     </footer>
     
-	<script src='/javascripts/MNOW_UIManager.js'></script>
+	<script src='/javascripts/Utils.js'></script>
+	<script src='/javascripts/DBModel.js'></script>
+	<script src='/javascripts/DialogManager.js'></script>
+	<script src='/javascripts/UIManager.js'></script>
 </body>
 </html>
