--- a/views/header.ejs
+++ b/views/header.ejs
@@ -15,7 +15,13 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li><a id='mnow-page-projects' href="#">Projects</a></li>
+	    <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Projects <span class="caret"></span></a>
+          <ul class="dropdown-menu">
+			<li><a id='mnow-page-projects' href="#">Projects</a></li>
+			<li><a id='mnow-page-milestones' href="#">Milestones</a></li>
+          </ul>
+        </li>
         <li><a id='mnow-page-users' href="#">Users</a></li>
       </ul>
       <form class="navbar-form navbar-left" role="search">
