bootgrid for remote ref tables

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -6,3 +6,14 @@ body {
 a {
   color: #00B7FF;
 }
+.uppercase {
+    text-transform: uppercase;
+}
+
+.lowercase {
+    text-transform: lowercase;
+}
+
+.capitalize {
+    text-transform: capitalize;
+}
