--- a/views/viewobject.ejs
+++ b/views/viewobject.ejs
@@ -14,14 +14,17 @@
 		<div class="panel panel-default">
 		  <div class="panel-body">
 			<div class='row'>
-			<% for (var property in object) { %>
-				<div class='col-xs-6 col-sm-3 col-lg-2'>
-					<b><%= property %></b>
+				<div class='col-xs-12'>
+					<h3 class='capitalize'><%= type %></h3>
 				</div>
-				<div class='col-xs-6 col-sm-3 col-lg-2'>
-					<%= resolved_object[property] %>
-				</div>
-			<% } %>
+				<% for (var property in object) { %>
+					<div class='col-xs-6 col-sm-3 col-lg-2'>
+						<b><%= property %></b>
+					</div>
+					<div class='col-xs-6 col-sm-3 col-lg-2'>
+						<%= resolved_object[property] %>
+					</div>
+				<% } %>
 			</div>
 		  </div>
 		</div>
@@ -32,6 +35,7 @@
 		  <div class="panel-body">
 			<% for (var property in references) { %>
 				<div class='row'>
+					<h3 class='capitalize'><%= property %></h3>
 					<div class='col-xs-12'>
 					<%= references[property] %>
 					</div>
