--- a/views/viewobject.ejs
+++ b/views/viewobject.ejs
@@ -2,13 +2,6 @@
 <h1><%=title%></h1>
 <div class='mnow-toolbar row'>
 	<div class='col-xs-12'>
-		<% for (var i =0 ; i<buttons.length ; i++ ) { %>
-		<div class="btn-group" role="group" aria-label="...">
-			<% for (var j =0 ; j<buttons[i].length ; j++ ) { %>
-				<button id="<%=buttons[i][j].id%>" type="button" class="btn btn-default"><span class="glyphicon <%=buttons[i][j].glyph%>" title=""></span><%=buttons[i][j].label%></button>
-			<% } %>
-		</div>
-		<% } %>
 	</div>
 </div>
 <div class='mnow-idcard row'>
@@ -17,7 +10,13 @@
 		  <div class="panel-body">
 			<div class='row'>
 				<div class='col-xs-12'>
-					<h3 class='capitalize'><%= type %></h3>
+					<h3 class='capitalize inline'><%= type %></h3>
+					<div class="btn-group" role="group" aria-label="...">
+						<% var btns=  buttons[0].buttons%>
+						<% for (var j =0 ; j<btns.length ; j++ ) { %>
+						<button id="<%=btns[j].id%>" type="button" class="btn btn-default btn-sm <%=btns[j].class%>"><span class="glyphicon <%=btns[j].glyph%>" title=""></span><%=btns[j].label%></button>
+						<% } %>
+					</div>
 				</div>
 				<% for (var property in object) { %>
 					<div class='col-xs-6 col-sm-3 col-lg-2'>
@@ -35,14 +34,23 @@
 	<div class='col-xs-12'>
 		<div class="panel panel-default">
 		  <div class="panel-body">
+			<% var i= 1; %>
 			<% for (var property in references) { %>
 				<div class='row'>
-					<h3 class='capitalize'><%= property %></h3>
+					<div class='col-xs-12'>
+						<h3 class='capitalize inline'><%= property %></h3>
+						<div class="btn-group" role="group" aria-label="...">
+							<% var btns=  buttons[i].buttons%>
+							<% for (var j =0 ; j<btns.length ; j++ ) { %>
+								<button id="<%=btns[j].id%>" type="button" class="btn btn-default btn-sm <%=btns[j].class%>"><span class="glyphicon <%=btns[j].glyph%>" title=""></span><%=btns[j].label%></button>
+							<% } %>
+						</div>
+					</div>
 					<div class='col-xs-12'>
 					<%= references[property] %>
 					</div>
 				</div>
-			<% } %>
+			<% i++;  } %>
 		  </div>
 		</div>
 	</div>
