--- a/views/header.ejs
+++ b/views/header.ejs
@@ -24,11 +24,11 @@
         </li>
         <li><a id='mnow-page-users' href="#">Users</a></li>
       </ul>
-      <form class="navbar-form navbar-left" role="search">
+      <form class="navbar-form navbar-left" id='mnow-search-form' role="search">
         <div class="form-group">
-          <input type="text" class="form-control" placeholder="Search">
+          <input type="text" id='mnow-search-text' class="form-control" placeholder="Search">
         </div>
-        <button type="submit" class="btn btn-default">Submit</button>
+        <button type="submit" id='mnow-search-submit' class="btn btn-default">Submit</button>
       </form>
       <ul class="nav navbar-nav navbar-right">
         <li><a href="#">Link</a></li>
