--- a/views/search.ejs
+++ b/views/search.ejs
@@ -1,5 +1,10 @@
 <!-- views/pages/defaultlist.ejs -->
 <h1><%=title%></h1>
 <div class='row'>
-
+	<% for (var j =0 ; j<results.length ; j++ ) { %>
+	<h3 class='capitalize'> <%= results[j].type %></h3>
+		<div class='col-xs-12'>
+			<%= HtmlUtils.array2Table("mnow-search-tbl-"+results[j].type,results[j].list,"id",null,commandtbl) %>
+		</div>
+	<% } %>
 </div>
